--- a/assets/icons/icomoon-v1.0/demo.html
+++ b/assets/icons/icomoon-v1.0/demo.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="style.css"></head>
 <body>
     <div class="bgc1 clearfix">
-        <h1 class="mhmm mvm"><span class="fgc1">Font Name:</span> icomoon <small class="fgc1">(Glyphs:&nbsp;12)</small></h1>
+        <h1 class="mhmm mvm"><span class="fgc1">Font Name:</span> icomoon <small class="fgc1">(Glyphs:&nbsp;13)</small></h1>
     </div>
     <div class="clearfix mhl ptl">
         <h1 class="mvm mtn fgc1">Grid Size: Unknown</h1>
@@ -155,8 +155,25 @@
         </div>
     </div>
     <div class="clearfix mhl ptl">
-        <h1 class="mvm mtn fgc1">Grid Size: 24</h1>
+        <h1 class="mvm mtn fgc1">Grid Size: 20</h1>
         <div class="glyph fs2">
+            <div class="clearfix bshadow0 pbs">
+                <i class="icon-close"></i>
+                <span class="mls"> icon-close</span>
+            </div>
+            <fieldset class="fs0 size1of1 clearfix hidden-false">
+                <input type="text" readonly value="e91d" class="unit size1of2" />
+                <input type="text" maxlength="1" readonly value="&#xe91d;" class="unitRight size1of2 talign-right" />
+            </fieldset>
+            <div class="fs0 bshadow0 clearfix hidden-true">
+                <span class="unit pvs fgc1">liga: </span>
+                <input type="text" readonly value="" class="liga unitRight" />
+            </div>
+        </div>
+    </div>
+    <div class="clearfix mhl ptl">
+        <h1 class="mvm mtn fgc1">Grid Size: 24</h1>
+        <div class="glyph fs3">
             <div class="clearfix bshadow0 pbs">
                 <i class="icon-arrow_back_ios"></i>
                 <span class="mls"> icon-arrow_back_ios</span>
@@ -170,7 +187,7 @@
                 <input type="text" readonly value="arrow_back_ios" class="liga unitRight" />
             </div>
         </div>
-        <div class="glyph fs2">
+        <div class="glyph fs3">
             <div class="clearfix bshadow0 pbs">
                 <i class="icon-arrow_forward_ios"></i>
                 <span class="mls"> icon-arrow_forward_ios</span>
