shomokh project finished

--- a/index.html
+++ b/index.html
@@ -799,7 +799,7 @@
         });
 
         sr.reveal(
-            `#benefits, #offers ,#video ,#testim , #contact ,#advantges`, {
+            `#benefits, #offers ,#video,#imagesSlider ,#testim , #contact ,#advantges`, {
                 interval: 200,
             }
         );
